# workflow-tools

./: .version  README.md  docker-compose.yml  test  tmux-4k  tmux-ss
.github/workflows/: dev.yml  release.yml
.tmuxp/: .tmuxp.mac13.yml  .tmuxp.yml
archive/tmuxp/4k/: .tmuxp.yml
cluster/: README.md
cluster/ansible/: Dockerfile  README.md  docker-compose.yaml
cluster/ansible/src/: hosts
cluster/bob/: .gitignore  pyproject.toml
cluster/gluster/: create-gluster-volume.sh
cluster/k8s/: kustomization.yaml
computer-setup/: ubuntu.sh
docker/: dockerfile
docker/workspace-in-docker/: dockerfile-alpine
dotfiles/: README.md  install_dotfiles.sh  test
dotfiles/archive/etailz/: .Xresources  .xinitrc
dotfiles/archive/msi_laptop/: .bashrc  .vimrc
dotfiles/archive/nike-mac/: .bash_profile  .tmux.conf  .vimrc
dotfiles/configs/: init.vim  nvim
dotfiles/configs/nvim/: init.vim
dotfiles/current/: .bash_aliases  .bash_profile  .bashrc  .profile  .tmux.conf  .vimrc  .zshrc
dotfiles/current/mac/: .profile  .vimrc  .zprofile  .zsh_functions  .zshrc
dotfiles/current/shared/: .env_setup  .functions  .profile  .vimrc
homelab/: README.md
homelab/ansible/: README.md  ansible.cfg  design.md  hosts  requirements.yml
homelab/apps/: README.md
homelab/functions/: hello-python.yml
homelab/k8s/: README.md  glusterfs-svc.yaml  nginx.yaml
nix-homes/: README.md  framework-joseph.nix
nix-homes/modules/: arduino.nix  base.nix  dwm.nix  neovim.nix  python.nix  settings.nix
reverseproxy/: docker-compose.yml
tmux-archive/: tmux-ss
tmuxp/4k/: .tmuxp.yml
(+239 files in other folders)
